package Estructuras;

public interface MiIterador<T> {
    boolean hasNext();
    T next();
}
